--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "codemirror": "^5.39.0",
     "dialogs": "^1.1.20",
+    "directory-tree": "^2.1.0",
     "electron-tabs": "^0.9.2",
     "g": "^2.0.1",
     "jquery": "^3.3.1",
